@@ -7,20 +7,11 @@ import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.support.TransactionTemplate;
 
 import java.io.ByteArrayInputStream;
-import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.TreeMap;
-import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
+import java.util.*;
+import java.util.concurrent.*;
 
 @Service
-public class SkillIngestService {
+class SkillIngestService {
 
     private static final Logger log = LoggerFactory.getLogger(SkillIngestService.class);
 
@@ -34,28 +25,22 @@ public class SkillIngestService {
     private final SkillUpsertRepository upsertRepository;
     private final PlatformTransactionManager transactionManager;
 
-    public SkillIngestService(SkillXlsxReader xlsxReader,
-                              SkillUpsertRepository upsertRepository,
-                              PlatformTransactionManager transactionManager) {
+    SkillIngestService(SkillXlsxReader xlsxReader,
+                       SkillUpsertRepository upsertRepository,
+                       PlatformTransactionManager transactionManager) {
         this.xlsxReader = xlsxReader;
         this.upsertRepository = upsertRepository;
         this.transactionManager = transactionManager;
     }
 
     /**
-     * Runs {@link #importFromXlsx(InputStream)} on its own virtual thread and returns immediately.
+     * Runs {@link #importFromXlsx(byte[])} on its own thread and returns immediately.
      * {@code content} must be a fully-read, request-independent copy — the caller's original
      * source (e.g. a servlet {@code MultipartFile}) may no longer be valid once its HTTP
      * request completes, which can happen before this background import finishes.
      */
-    public void importFromXlsxAsync(byte[] content) {
-        Thread.ofVirtual().name("skill-import").start(() -> {
-            try {
-                importFromXlsx(new ByteArrayInputStream(content));
-            } catch (Exception e) {
-                log.error("Background skill import failed", e);
-            }
-        });
+    void importFromXlsxAsync(byte[] content) {
+        new Thread(() -> importFromXlsx(content)).start();
     }
 
     /**
@@ -65,8 +50,9 @@ public class SkillIngestService {
      * split into chunks and upserted concurrently to keep any single
      * transaction short.
      */
-    public int importFromXlsx(InputStream in) {
-        Map<Integer, List<SkillRow>> byDepth = groupByDepth(xlsxReader.read(in));
+    synchronized void importFromXlsx(byte[] content) {
+        ByteArrayInputStream inputStream = new ByteArrayInputStream(content);
+        Map<Integer, List<SkillRow>> byDepth = groupByDepth(xlsxReader.read(inputStream));
         Map<String, UUID> idByPath = new ConcurrentHashMap<>();
         int imported = 0;
 
@@ -81,7 +67,6 @@ public class SkillIngestService {
         }
 
         log.info("Imported {} skills", imported);
-        return imported;
     }
 
     private Map<Integer, List<SkillRow>> groupByDepth(List<SkillRow> rows) {
@@ -94,7 +79,7 @@ public class SkillIngestService {
 
     private int upsertLevel(ExecutorService executor, List<SkillRow> levelRows, Map<String, UUID> idByPath) {
         List<Future<Integer>> futures = new ArrayList<>();
-        for (List<SkillRow> chunk : partition(levelRows, CHUNK_SIZE)) {
+        for (List<SkillRow> chunk : partition(levelRows)) {
             futures.add(executor.submit(() -> upsertChunk(chunk, idByPath)));
         }
         try {
@@ -109,6 +94,14 @@ public class SkillIngestService {
         } catch (ExecutionException e) {
             throw new IllegalStateException("Skill import failed", e.getCause());
         }
+    }
+
+    private static <T> List<List<T>> partition(List<T> list) {
+        List<List<T>> chunks = new ArrayList<>();
+        for (int i = 0; i < list.size(); i += CHUNK_SIZE) {
+            chunks.add(list.subList(i, Math.min(i + CHUNK_SIZE, list.size())));
+        }
+        return chunks;
     }
 
     private int upsertChunk(List<SkillRow> chunk, Map<String, UUID> idByPath) {
@@ -128,13 +121,5 @@ public class SkillIngestService {
             return upserted;
         });
         return count != null ? count : 0;
-    }
-
-    private static <T> List<List<T>> partition(List<T> list, int size) {
-        List<List<T>> chunks = new ArrayList<>();
-        for (int i = 0; i < list.size(); i += size) {
-            chunks.add(list.subList(i, Math.min(i + size, list.size())));
-        }
-        return chunks;
     }
 }
